Removed GC deprecated options